[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "google-genai>=1.32.0",
    "streamlit>=1.49.1",
]
