[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "google-genai>=1.32.0",
    "streamlit>=1.49.1",
    "pydantic>=2.11.7",
    "sift-stack-py>=0.8.5",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.104.2",
]
